fix: register payload
